QQuickLoader: make sure the status property change properly

Since the invocation of [setSource] in qml will clear the old source url
first, it is hard to decide whether we have changed the source url,
especially when we call [setSource] with an empty string, and the loader's
status won't change properly.

Pick-to: 5.15
Fixes: QTBUG-85938
Change-Id: If61a33c790a4fd6562611c4c50756bc5e213363a
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>